<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Activity.SosmedActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        app:elevation="0.5dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_alignParentBottom="false"
        android:background="@drawable/bg_navbar"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/navigation" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        style="@style/Base.Widget.Design.TabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMinWidth="136dp"
        android:minHeight="48dp"
        app:tabMode="scrollable"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:background="@null"
        android:elevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigation">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabDiproses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/berita" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabSelesai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instagram"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabYoutube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabBerita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/youtube" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>