<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="1dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_round_signal_wifi_off_24" />

            <View
                android:layout_width="12dp"
                android:layout_height="0dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tidak_ada_koneksi"
                    android:fontFamily="@font/inter_medium"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/silakan_periksa_jaringan_data_anda"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@android:color/darker_gray" />

            </LinearLayout>


            <Button
                android:id="@+id/btn_koneksi_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/aktifkan"
                android:fontFamily="@font/inter_medium"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/SecondaryColor_1" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>